[package]
name = "opensim_networking"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "GPL-3.0-or-later"

#[profile.rel]
# opt-level='z' minimizes binary size, however this is not available in stable rustc yet
#opt-level = 'z'
#lto = true

[workspace]
members = ["opensim_messages", "opensim_types"]

[dependencies]
addressable_queue = "*"
bitflags = "*"
bitreader = { git = "https://github.com/irauta/bitreader", branch = "master" }
byteorder = "*"
crossbeam-channel = "*"
failure = "*"
futures = "*"
futures-await = "*"
# TODO: Once futures 0.2 lands there will be ThreadExecutor.
futures-cpupool = "*"
hyper = "*"
image = "*"
jpeg2000 = "*"
lazy_static = "*"
llsd = { git = "https://framagit.org/teleportlab/llsd" }
opensim_messages = { path = "opensim_messages" }
opensim_types = { path = "opensim_types" }
regex = "*"
reqwest = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
simple_disk_cache = "*"
slog = "*"
slog-term = "*"
slog-async = "*"
tokio-core = "*"
url = "*"
# TODO: Update as soon as this depends on nom 4.
xmlrpc = "*"

[dev-dependencies]
env_logger = "*"
toml = "*"
image = "*"
