[package]
name = "opensim_types"
version = "0.2.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>", "Dave Richardson <dsrich@hotmail.com>"]
license = "GPL-3.0"

[dependencies]
nalgebra = { version = "*", features = ["serde-serialize"] }
num-traits = "*"
serde = "*"
url = "*"
uuid = {version = "*", features = ["serde"]}

